# ROS_Assignment

./: EE656-Group_Contribution_Statement.docx  README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/rx200_moveit_control/lib/rx200_moveit_control/: rx200_moveit_client  rx200_pick_place_client
install/rx200_moveit_control/share/rx200_moveit_control/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/rx200_moveit_control/: package.xml  setup.cfg  setup.py
src/rx200_moveit_control/rx200_moveit_control/: rx200_moveit_action_client.py
