<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rx200_moveit_control</name>
  <version>0.0.1</version>
  <description>Package used for RX200 arm control via the moveit interface</description>
  <maintainer email="james.petri@mu.ie">James Florin Petri</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>rclpy</depend>
  <depend>moveit_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>math</depend>
  <depend>tf_transformations</depend>
  <depend>argparse</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
